=======
0.7.0b5
=======
- (note b5 may become 0.7.0)
- orm
  - Fixed regression introduced in 0.7b4 (!) whereby
    query.options(someoption("nonexistent name")) would
    fail to raise an error.  Also added additional
    error catching for cases where the option would
    try to build off a column-based element, further
    fixed up some of the error messages tailored
    in [ticket:2069]

  - It is an error to call query.get() when the
    given entity is not a single, full class 
    entity or mapper (i.e. a column).  This is
    a deprecation warning in 0.6.8.  
    [ticket:2144]

  - Fixed a potential KeyError which under some
    circumstances could occur with the identity 
    map, part of [ticket:2148]

  - added Query.with_session() method, switches 
    Query to use a different session.

  - horizontal shard query should use execution
    options per connection as per [ticket:2131]

  - a non_primary mapper will inherit the _identity_class
    of the primary mapper.  This so that a non_primary
    established against a class that's normally in an
    inheritance mapping will produce results that are 
    identity-map compatible with that of the primary
    mapper [ticket:2151] (also in 0.6.8)

- sql
  - Some improvements to error handling inside
    of the execute procedure to ensure auto-close
    connections are really closed when very 
    unusual DBAPI errors occur.

  - metadata.reflect() and reflection.Inspector() 
    had some reliance on GC to close connections
    which were internally procured, fixed this.

  - Added explicit check for when Column .name
    is assigned as blank string [ticket:2140]

  - Fixed bug whereby if FetchedValue was passed
    to column server_onupdate, it would not
    have its parent "column" assigned, added
    test coverage for all column default assignment
    patterns.  [ticket:2147]  also in 0.6.8

- postgresql
  - Fixed the psycopg2_version parsing in the 
    psycopg2 dialect.

- documentation